Fix input zoom on IOS

--- a/style.css
+++ b/style.css
@@ -379,9 +379,21 @@ ol li {
         font-size: 3rem;
         flex-basis: 100%;
     }
+
+    input {
+        width: 80vw;
+        font-size: 2.2rem;
+    }
 }
 
-@media (max-width:1000px) and (orientation:landscape) {
+@media (max-width:400px) {
+    input {
+        width: 85vw;
+        font-size: 2.4rem;
+    }
+}
+
+@media (min-width:600px) and (max-width:1000px) and (orientation:landscape) {
     :root {
         font-size: 1.1vw;
     }
